# fdf

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: fdf.h
libft/: Makefile
libft/include/libft/: math.h  mlx.h  str.h
libft/include/libft/ds/: vec_gen.inc
libft/include/libft/math/: m4.h  v3.h
libft/include/libft/mlx/: geo.h  img.h  mlx.h
libft/src/exe/: ft_job_dtor.c  ft_job_run.c
libft/src/math/: ft_m4.c  ft_m4_rot.c  ft_m4_trans.c  ft_v3_nor.c
libft/src/mlx/: ft_geo.c  ft_img.c  ft_img_wli.c  ft_win.c
libft/src/str/: ft_strsplit.c  ft_strword.c
src/: fdf.c
